--- a/test/test_recognizer.ipynb
+++ b/test/test_recognizer.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from presidio_analyzer import PatternRecognizer\n",
     "titles_recognizer = PatternRecognizer(supported_entity=\"TITLE\",\n",
-    "                                      deny_list=[\"Mr.\",\"Mrs.\",\"Miss\"])"
+    "                                      deny_list=[\"Mr.\",\"Mrs.\",\"Miss\"])\n"
    ],
    "id": "8bce22733b014c6b"
   }
