--- a/test/test_transformers.ipynb
+++ b/test/test_transformers.ipynb
@@ -349,7 +349,7 @@
     "    nlp_engine=transformers_nlp_engine,\n",
     "    supported_languages=[\"zh\"]\n",
     ")\n",
-    "transformers_nlp_engine.get_supported_languages()"
+    "transformers_nlp_engine.get_supported_languages()\n"
    ],
    "id": "9dc3fbf50ae8f58",
    "outputs": [
