--- a/test/test_transformers.ipynb
+++ b/test/test_transformers.ipynb
@@ -32,8 +32,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-25T07:50:33.841471Z",
-     "start_time": "2024-12-25T07:50:33.705178Z"
+     "end_time": "2024-12-26T11:38:33.373346Z",
+     "start_time": "2024-12-26T11:38:30.484386Z"
     }
    },
    "source": [
@@ -44,6 +44,14 @@
     "AutoModelForTokenClassification.from_pretrained(transformers_model)"
    ],
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/elvin/.conda/envs/envPre/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -90,12 +98,12 @@
        ")"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -258,8 +266,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-26T04:10:49.270872Z",
-     "start_time": "2024-12-26T04:10:49.266478Z"
+     "end_time": "2024-12-26T12:49:40.260028Z",
+     "start_time": "2024-12-26T12:49:40.256774Z"
     }
    },
    "cell_type": "code",
@@ -321,13 +329,13 @@
    ],
    "id": "8aad134cb7948a45",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-26T04:10:55.320861Z",
-     "start_time": "2024-12-26T04:10:51.620996Z"
+     "end_time": "2024-12-26T12:49:45.071436Z",
+     "start_time": "2024-12-26T12:49:44.350001Z"
     }
    },
    "cell_type": "code",
@@ -357,8 +365,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/elvin/.conda/envs/envPre/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Device set to use cpu\n"
      ]
     },
@@ -368,23 +374,23 @@
        "['zh']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-26T04:11:56.259156Z",
-     "start_time": "2024-12-26T04:11:43.467613Z"
+     "end_time": "2024-12-26T12:49:49.311736Z",
+     "start_time": "2024-12-26T12:49:49.254520Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "results_chinese = analyzer.analyze(text=\"我的名字是万国安，手机电话是18023333333\", language=\"zh\")\n",
+    "results_chinese = analyzer.analyze(text=\"我的名字是万国安，QQ号是18023333333\", language=\"zh\")\n",
     "print(results_chinese)"
    ],
    "id": "e1fefe8cbc33c691",
@@ -400,11 +406,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[type: PERSON, start: 5, end: 8, score: 0.9885568618774414, type: PHONE_NUMBER, start: 14, end: 25, score: 0.4]\n"
+      "[type: PERSON, start: 5, end: 8, score: 0.9799465537071228, type: PHONE_NUMBER, start: 13, end: 24, score: 0.4]\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "7b343aee93d5d2e3"
   }
  ],
  "metadata": {
